borsh/tests/snapshots/test_primitives__char_vec.snap
---
source: borsh/tests/test_primitives.rs
expression: buf
---
[
    15,
    0,
    0,
    0,
    104,
    0,
    0,
    0,
    100,
    39,
    0,
    0,
    15,
    254,
    0,
    0,
    108,
    0,
    0,
    0,
    108,
    0,
    0,
    0,
    111,
    0,
    0,
    0,
    32,
    0,
    0,
    0,
    208,
    143,
    0,
    0,
    40,
    117,
    0,
    0,
    113,
    95,
    0,
    0,
    205,
    84,
    0,
    0,
    229,
    78,
    0,
    0,
    190,
    143,
    0,
    0,
    238,
    118,
    0,
    0,
    132,
    118,
    0,
    0,
]
