borsh/tests/snapshots/test_primitives__isize_min.snap
---
source: borsh/tests/test_primitives.rs
expression: buf
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    128,
]
