borsh/tests/snapshots/test_primitives__isize_neg.snap
---
source: borsh/tests/test_primitives.rs
expression: buf
---
[
    156,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
]
