borsh/tests/snapshots/test_primitives__isize_pos.snap
---
source: borsh/tests/test_primitives.rs
expression: buf
---
[
    100,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
