borsh/tests/snapshots/test_primitives__usize_max.snap
---
source: borsh/tests/test_primitives.rs
expression: buf
---
[
    255,
    255,
    255,
    255,
    255,
    255,
    255,
    255,
]
