borsh/tests/snapshots/test_primitives__usize_min.snap
---
source: borsh/tests/test_primitives.rs
expression: buf
---
[
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
]
